# NotenMappenSort

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sort.py  split_and_crop.py
