[tool.poetry]
description = "Small script to sort all sheets alphabetically into folders for each part."
authors = ["Yannick Funk <yannickfunk@yahoo.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"